# rss-reader

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  feeds.opml  feeds.yaml  go.mod  go.sum  main.go  main_test.go
.claude/: launch.json
.codex/environments/: environment.toml
.github/: dependabot.yml
.github/workflows/: deploy-pages.yml  go-test.yml  release.yml  test.yml  web-test.yml
internal/config/: config.go  config_test.go  xdg.go
internal/db/: db.go  db_test.go  migration_smoke_test.go  models.go
internal/feeds/: opml.go  opml_test.go
internal/fetcher/: discover.go  discover_test.go  fetcher.go  fetcher_test.go  ssrf.go  ssrf_test.go
internal/handlers/: articles.go  articles_test.go  feeds.go  feeds_test.go  folders.go  folders_test.go  handlers_test.go  json.go  json_test.go  refresh.go  refresh_test.go
internal/opmlsync/: opmlsync.go  opmlsync_test.go
internal/poller/: poller.go  poller_test.go
internal/server/: proxy.go  proxy_test.go  server.go  server_test.go
src/: AGENTS.md  config.rs  feeds.rs  fetcher.rs  main.rs  poller.rs  tokenize.rs
src/db/: duckdb_impl.rs  fts.rs  mod.rs  sqlite.rs
src/routes/: articles.rs  feeds.rs  folders.rs  mod.rs  refresh.rs
web/: AGENTS.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts  vitest.config.ts
web/src/: App.test.tsx  App.tsx  main.tsx  styles.css
web/src/__tests__/: App.test.tsx
web/src/api/: client.ts
web/src/components/: ArticleList.tsx  ArticleView.test.tsx  ArticleView.tsx  HelpOverlay.tsx  IconRail.tsx  Sidebar.tsx  Toast.tsx  Topbar.tsx
web/src/hooks/: useArticleMutations.ts  useDebounce.ts  usePersistedState.ts  useReadState.ts
web/src/utils/: decodeEntities.ts  thumbnail.ts  (+2 more)
(+14 files in other folders)
